--- a/scss/add_product.scss
+++ b/scss/add_product.scss
@@ -42,8 +42,8 @@ nav.main{
     border-top: .4px solid #2d343c;
     border-bottom: .4px solid #2d343c;
     ul{
-        width: 60vw;
-        min-width: 500px;
+        width: 100vw;
+        padding: 0 var(--padding-general-sides);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -55,6 +55,7 @@ nav.main{
             height: 100%;
         }
         li{
+            width: fit-content;
             height: 100%;
             display: flex;
             align-items: center;
@@ -78,7 +79,7 @@ nav.main{
 main.admin{
     section.welcome{
         width: 100%;
-        height: calc(100vh - var(--nav-bar-height));
+        height: 100vh;
         border-bottom: .4px solid #2d343c;
         display: flex;
         flex-direction: column;
@@ -86,25 +87,56 @@ main.admin{
         align-items: center;
         text-align: center;
 
-        h1{
-            font-size: 200px;
-            font-weight: 900;
-        }
-        a{
-            background-color: white;
-            border-radius: .5em;
-            padding: 1em 2.5em;
-            font-size: x-large;
+        h1 {
+            padding: 0 0 0 var(--padding-general-sides);
+            font-size: 120px;
+            margin-bottom: .5em;
             font-weight: 700;
-            box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
-            &:hover{
-                transform: scale(1.05);
-                transition: all ease-out 350ms;
-                box-shadow: 15px 15px 20px rgba(1, 1, 1, 0.05);
+            font-family: 'Courier Prime', monospace;
+            overflow: hidden; /* Ensures the content is not revealed until the animation */
+            border-right: .15em solid orange; /* The typwriter cursor */
+            white-space: nowrap; /* Keeps the content on a single line */
+            margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+            letter-spacing: .05em; /* Adjust as needed */
+            animation: 
+              typing 3.5s steps(30, end),
+              blink-caret .5s step-end infinite;
+          }
+          
+          /* The typing effect */
+          @keyframes typing {
+            from { width: 0 }
+            to { width: 80% }
+          }
+          
+          /* The typewriter cursor effect */
+          @keyframes blink-caret {
+            from, to { border-color: transparent }
+            50% { border-color: orange }
+          }
+        .btns{
+            display: flex;
+            width: 100%;
+            padding: 0 var(--padding-general-sides);
+            justify-content: center;
+            column-gap: 5em;
+            a{
+                background-color: white;
+                border-radius: .5em;
+                padding: 1em 2.5em;
+                font-size: x-large;
+                font-weight: 700;
+                box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+                &:hover{
+                    transform: scale(1.05);
+                    transition: all ease-out 350ms;
+                    box-shadow: 15px 15px 20px rgba(1, 1, 1, 0.05);
+                }
             }
         }
     }
     section.products{
+        min-height: calc(100vh - var(--nav-bar-height));
         position: relative;
         .product-sections {
             margin: var(--padding-general-sides);
@@ -119,49 +151,72 @@ main.admin{
                 padding: 15px;
                 background-color: rgba(255,255,255,0.2);
                 color: rgb(0, 0, 0);
-            }
-            
-            th {
                 text-align: left;
             }
             
             thead {
                     position: sticky;
-                    top: calc(var(--nav-bar-height) - 1px);
+                    top: calc(var(--nav-bar-height) - 2px);
                     z-index: 4;
-                tr{}
+                    h2{
+                        width: max-content;
+                        height: 0;
+                        position: absolute;
+                        top: 38px;
+                        left: -57px;
+                        transform: rotate(-90deg);
+                        text-align: end;
+                    }
                 th {
                     background-color: #55608f;
                 }
             }
             
             tbody {
-                tr {
-                    &:hover {
-                        background-color: rgba(255,255,255,0.3);
+                .toggle{
+                    input[type="checkbox"] {
+                        pointer-events: none;
+                     }
+                     
+                }
+                button{
+                    &:has(label) {
+                        font-size: 0.75rem;
+                        padding: 0.4em 0.9em;
+                        margin: 0.25em;
+                        border-radius: 1em;
+                        border: none;
+                        outline: none;
+                        background: #dddddd;
+                        cursor: default;
+                        label{
+                            cursor: pointer;
+                        }
+                      }
+                    &:has(label:hover) {
+                        transform: scale(1.02);
+                        background: #c5c5c5;
+                        transition: transform 50ms ease;
+                    }
+                    &:has(label.clicked) {
+                        transform: scale(1.02);
+                        background: #b5b5b5;
+                        transition: transform 50ms ease;
                     }
                 }
-                td {
-                    position: relative;
-                    &:hover {
-                        &:before {
-                            content: "";
-                            position: absolute;
-                            left: 0;
-                            right: 0;
-                            top: -9999px;
-                            bottom: -9999px;
-                            background-color: rgba(255,255,255,0.2);
-                            z-index: -1;
-                        }
+                .ratings{
+                    min-width: 91px;
+                    i{
+                        color: #adadad;
                     }
-                    .ratings{
-                        min-width: 91px
+                    i.yellow{
+                        color: #fdcc0d;
                     }
                 }
             }
         }
         
+}
 }
 
 // overgenomen van login form
@@ -367,7 +422,7 @@ form{
         width: 30%;
     }
     .ratings{
-        width: 20%;
+        min-width: 91px;
         input{
             display: none;
         }
@@ -509,4 +564,4 @@ form{
 
 .hidden{
     display: none;
-}}
+}
