--- a/scss/product-card.scss
+++ b/scss/product-card.scss
@@ -100,6 +100,9 @@ section.card-front{
             font-weight: 700;
             color: #626262;
         }
+        .desc{
+            display: none;
+        }
     }
 }
 // section.product-modal{
@@ -118,12 +121,12 @@ section.card-front{
         left: 50%;
         top: 50%;
         transform: translate(-50%,-45%);
-        width: 80vw;
-        max-width: 1100px;
-        min-width: 800px;
+        width: 90vw;
+        max-width: 1500px;
+        // min-width: 800px;
         min-height: fit-content;
-        height: 55vh;
-        max-height: 800px;
+        height: 70vh;
+        max-height: 1000px;
         // overflow: auto; /* Enable scroll if needed */
         
         .product-details{
@@ -145,7 +148,8 @@ section.card-front{
                 height: 0;
                 line-height: 0;
                 position: relative;
-                top: -4px;
+                top: -15px;
+                color: #606063;
                 &:hover, &:focus{
                     color: black;
                     text-decoration: none;
@@ -172,6 +176,8 @@ section.card-front{
                     height: 20%;
                     gap: 5px;
                     img{
+                        object-fit: cover;
+                        object-position: center;
                         width: calc((100% - 15px) / 4);
                         height: 100%;
                     }
@@ -180,7 +186,7 @@ section.card-front{
             .text{
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                justify-content: space-evenly;
                 width: 50%;
                 height: 100%;
                 span.title{
@@ -229,8 +235,22 @@ section.card-front{
                     }
                 }
                 .description{}
-                .ratings{}
-                .total-price{}
+                .ratings{
+                    i{
+                        color: #adadad;
+                        &:hover{
+                            color: #fdcc0d;
+        
+                        }
+                    }
+                    i.yellow{
+                        color: #fdcc0d;
+                    }
+                }
+                .total-price{
+                    font-size: 2.2rem;
+                    line-height: 1;
+                }
             }
         }
     }
@@ -296,6 +316,123 @@ section.card-front{
                     width: 100%;
                     text-align: right;
                     vertical-align: top;
+                }
+            }
+        }
+        dialog.product-modal{
+            border: none;
+            background: #e0e0e0;
+            z-index: 10;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            // overflow: auto; /* Enable scroll if needed */
+            
+            .product-details{
+                position: absolute;
+                z-index: 3;
+                background-color: #fefefe;
+                margin: 0;
+                padding: 40px 15px;
+                border: 1px solid #888;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                .close{
+                    font-size: 28px;
+                    align-self: flex-start;
+                    width: 0;
+                    height: 0;
+                    line-height: 0;
+                    position: relative;
+                    top: -10px;
+                    left: 5px;
+                    &:hover, &:focus{
+                        color: black;
+                        text-decoration: none;
+                        cursor: pointer;
+                    }
+                }
+                .images{
+                    position: absolute;
+                    top: 100px;
+                    left: 0;
+                    width: 85%;
+                    margin: 0 7.5%;
+                    height: 30vh;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 5px;
+                    
+                    > img{
+                        object-fit: cover;
+                        width: 100%;
+                        height: 100%;
+                    }
+                    figure{
+                        display:none;
+                    }
+                }
+                .text{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    width: 85%;
+                    height: 100%;
+                    span.title{
+                        font-weight: 600;
+                        font-size: small;
+                        color:#888888;
+                    }
+                    .product{
+                        h3{
+                            font-size: 2rem;
+                            line-height: 1;
+                        }
+                        span{
+                            display: none;
+                        }
+                    }
+                    .price-container{
+                        display: flex;
+                        gap: 4rem;
+                        .wrap{
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+                            align-items: flex-start;
+                            row-gap: 5px;
+                            .price{
+                                font-size: 2.2rem;
+                                line-height: 1;
+                            }
+                        }
+                        .amount-wrapper{
+                            display: none;
+                        }
+                    }
+                    .description{}
+                    .ratings{
+                        i{
+                            color: #adadad;
+                            &:hover{
+                                color: #fdcc0d;
+            
+                            }
+                        }
+                        i.yellow{
+                            color: #fdcc0d;
+                        }
+                    }
+                    .total-price{
+                        font-size: 2.2rem;
+                        line-height: 1;
+                    }
                 }
             }
         }
