--- a/cssMain/style.css
+++ b/cssMain/style.css
@@ -141,21 +141,24 @@ body {
 }
 
 .swiper {
-  max-height: 50%;
+  /* max-height: 50%; */
+
   border-radius: 0.25rem;
-  /* border: 1px solid red; */
+  width: 100%;
+  height: 50%;
 }
 
 .swiper-wrapper {
+  height: 100%;
 }
-
 .swiper-slide {
-  /* border: 1px solid blue; */
+  height: 100%;
+
+  /* width: 100% !important; */
+  /* height: auto !important; */
+  /* object-fit: cover !important; */
+  /* object-position: center !important; */
 }
 
 .swiper-slide > img {
-  width: 100% !important;
-  height: auto !important;
-  object-fit: cover !important;
-  object-position: center !important;
 }
