Swiper function on screen width

--- a/scss/product-card.scss
+++ b/scss/product-card.scss
@@ -70,7 +70,7 @@ section.card-front{
     }
     img:first-child{
         display: block;
-        height: 55%;
+        // height: 55%;
     }
     figure > img:first-child{
         height: 100%;
