--- a/CSS/admin.scss
+++ b/CSS/admin.scss
@@ -1,4 +1,7 @@
-@import url(./../cssMain/reset_tc_collection.css);
+@import url(./reset_tc_collection.css);
+@import url(./select.scss);
+@import url(./login_page.scss);
+
 
 
 :root {
