--- a/CSS/login_page.scss
+++ b/CSS/login_page.scss
@@ -1,4 +1,4 @@
-@import url(./../cssMain/reset_tc_collection.css);
+@import url(./reset_tc_collection.css);
 
 *{
     font-family: "Roboto", sans-serif;
