FIXED ALL THIS SH*T

--- a/CSS/admin.scss
+++ b/CSS/admin.scss
@@ -1,6 +1,6 @@
-@import url(./reset_tc_collection.css);
-@import url(./select.scss);
-@import url(./login_page.scss);
+@import "./reset_tc_collection.css";
+@import "./select.scss";
+@import "./login_page.scss";
 
 
 
