--- a/CSS/admin.scss
+++ b/CSS/admin.scss
@@ -1,7 +1,4 @@
 @import "./reset_tc_collection.css";
-@import "./select.scss";
-@import "./login_page.scss";
-
 
 
 :root {
@@ -33,50 +30,7 @@ body {
     }
 }
 
-// nav bar: admin and add product page
-nav.main{
-    background-color: white;
-    position: fixed;
-    z-index: 5;
-    height: var(--nav-bar-height);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: .4px solid #2d343c;
-    border-bottom: .4px solid #2d343c;
-    ul{
-        width: 100vw;
-        padding: 0 var(--padding-general-sides);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 100%;
-        .rechts{
-            width: 20%;
-            display: flex;
-            justify-content: space-between;
-            height: 100%;
-        }
-        li{
-            width: fit-content;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            padding: 0 1ch;
-            a{
-                font-weight: 700;
-            }
-            &:hover{
-                background-color: #2d343c;
-                color: white;
-            }
-        }
-        & > li{
-            display: flex;
-            align-items: center;
-        }
-    }
-}
+@import "./nav_admin.scss";
 
 // adminpage
 main.admin{
@@ -227,348 +181,7 @@ main.admin{
 }
 }
 
-// overgenomen van login form
-form{
-    .form_input{
-        position: relative;
-        border-bottom: 2px solid #adadad;
-        margin-bottom: 20px;
-        
-    }
-    
-    .form_input input{
-        width: 100%;
-        padding: 0 5px;
-        height: 40px;
-        font-size: 16px;
-        border: none;
-        background: none;
-        outline: none;
-        flex-grow: 1;
-    }
-    .form_input label{
-        position: absolute;
-        top: 50%;
-        left: 5px;
-        color: #adadad;
-        transform: translateY(-50%);
-        font-size: 16px;
-        pointer-events: none;
-        transition: .5s;
-    }
-      
-}
 
-// General wrapper css
-.form-container{
-    padding: 2em var(--padding-general-sides) 1em var(--padding-general-sides);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60vw;
-    min-width: 500px;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
-    
-    // wrapper of section (h2 + wrap2)
-    .wrapper{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        row-gap: var(--padding-general-sides);
-        border-bottom: 1px lightgray solid;
-        padding: 1em 0;
-        
-        // wrapper of section form fields
-        .wrap2{
-            display: flex;
-            flex-flow: row wrap;
-            width: 70%;
-        }
-    }
-
-}
-// Title section
-.title-wrap.wrapper{
-    --toggle-size : 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    h1{
-        font-size: x-large;
-        font-weight: 700;
-    }
-    .toggles{
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        gap: 20px;
-
-        .toggle{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            input[type=checkbox]{
-                height: 0;
-                width: 0;
-                visibility: hidden;
-            }
-            label {
-                cursor: pointer;
-                text-indent: -9999px;
-                width: calc(var(--toggle-size)*2);
-                height: var(--toggle-size);
-                background: grey;
-                display: block;
-                border-radius: var(--toggle-size);
-                position: relative;
-            }
-            
-            label:after {
-                content: '';
-                position: absolute;
-                top: calc(var(--toggle-size)/20);
-                left: calc(var(--toggle-size)/20);
-                width: calc(var(--toggle-size)/10*9);
-                height: calc(var(--toggle-size)/10*9);
-                background: #fff;
-                border-radius: calc(var(--toggle-size)/10*9);
-                transition: 0.3s;
-            }
-            
-            input:checked + label {
-                background: #bada55;
-            }
-            
-            input:checked + label:after {
-                left: calc(100% - calc(var(--toggle-size)/20));
-                transform: translateX(-100%);
-            }
-            
-            label:active:after {
-                width: calc(var(--toggle-size)/10*13);
-            }
-        }
-    }
-    
-    
-}
-
-// product section
-.product-wrap{
-    textarea {
-        background: transparent;
-        border: none;
-        box-shadow: none;
-        color: inherit;
-        font: inherit;
-        outline: none;
-        padding: 0;
-        resize: none;
-        width: 100%;
-      }
-    align-items: flex-start;
-    .form_input-prodname, .form_input-price{
-        margin-top: 15px;
-        & span::before{
-            content: '';
-            position: absolute;
-            top: 40px;
-            left: 0;
-            width: 0%;
-            height: 2px;
-            background: #2d343c;
-            transition: .5s;
-        }
-        & input:focus ~ label,
-        & input:valid ~ label{
-            top: -5px;
-            color: #2d343c;
-        }
-        & input:focus ~ span::before,
-        & input:valid ~ span::before{
-            width: 100%;
-        }
-    }
-    .form_input-prodname{
-        flex-grow: 3;
-        flex-basis: 70%;
-    }
-    .form_input-price{
-        flex-grow: 1;
-        flex-basis: 30%;
-    }
-    .form_input-description{
-        width: 100%;
-    }
-}
-
-// description area
-.form_input-description{
-    textarea{
-        width: 100%;
-        padding: .5em .3em;
-        border: none;
-    }
-    textarea:focus, textarea:valid, textarea:active, textarea::selection{
-        border: none;
-    }
-    textarea::placeholder{
-        color: #adadad;
-        font-size: 17px;
-        left: -5px;
-    }
-}
-
-// filter section
-.filter-wrap{
-    .select_input,label{
-        width: 30%;
-    }
-    .ratings{
-        min-width: 91px;
-        input{
-            display: none;
-        }
-        figure{
-            user-select: none;
-
-            i{
-                color: #adadad;
-                &:hover{
-                    color: #fdcc0d;
-
-                }
-            }
-            i.yellow{
-                color: #fdcc0d;
-            }
-        }
-    }
-    button.add{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 0;
-        height: 0;
-        border-radius: 25px;
-        cursor: pointer;
-        outline: none;
-        &:hover span{
-            border-color: #2d343c;
-            transition: .5s;
-            opacity: 1;
-        }
-        span{
-            opacity: 1;
-            width: 30px;
-            text-align: center;
-            font-variation-settings:
-            'FILL' 1,
-            'wght' 400,
-            'GRAD' 0,
-            'opsz' 6
-        }
-    }
-    .colors{
-        display: flex;
-        // flex-basis: 20px;
-        gap: 10px;
-        row-gap: 5px;
-        flex-wrap: wrap;
-        button:has(label) {
-            font-size: 0.75rem;
-            padding: 0.4em 0.9em;
-            margin: 0.25em;
-            border-radius: 1em;
-            border: none;
-            outline: none;
-            background: #dddddd;
-            cursor: default;
-            label{
-                cursor: pointer;
-            }
-          }
-        button:has(label:hover) {
-            transform: scale(1.02);
-            background: #c5c5c5;
-            transition: transform 50ms ease;
-        }
-        button:has(label.clicked) {
-            transform: scale(1.02);
-            background: #b5b5b5;
-            transition: transform 50ms ease;
-        }
-    }
-    .wrap2 {
-        display: flex;
-        column-gap: 10px;
-    }
-    
-}
-
-.img-wrap.wrapper{
-    border: none;
-    padding-bottom: 0;
-    .wrap2{
-        display: flex;
-        flex-flow: column nowrap;
-        row-gap: 5px;
-        button{
-            width: 80px;
-            height: 30px;
-            border: 1px solid;
-            background: #2d343c;
-            border-radius: 25px;
-            font-size: 12px;
-            color: #e9f4fb;
-            font-weight: 700;
-            cursor: pointer;
-            outline: none;
-            margin: 5px auto auto 0;
-            &:hover{
-                border-color: #2d343c;
-                transition: .5s;
-            }
-        }
-    }
-}
-
-//sumbit button
-.submit-btn{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    height: 8em;
-    input[type="submit"]{
-        width: 200px;
-        height: 50px;
-        border: 1px solid;
-        background: #2d343c;
-        border-radius: 25px;
-        font-size: 18px;
-        color: #e9f4fb;
-        font-weight: 700;
-        cursor: pointer;
-        outline: none;
-        margin: auto auto;
-      }
-      
-      input[type="submit"]:hover{
-        border-color: #2d343c;
-        transition: .5s;
-      }
-}
-
-.filter-wrap input[type="checkbox"]{
-    display: none;
-}
 
 .hidden{
     display: none;
