--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -51,7 +51,8 @@ body {
 
 .products__filter {
   margin-top: var(--margin-vert-between-sections);
-  margin-bottom: var(--margin-vert-between-sections);
+  // margin-bottom: var(--margin-vert-between-sections);
+  margin-bottom: 2rem;
 }
 
 .filter__list {
