--- a/CSS/filter.scss
+++ b/CSS/filter.scss
@@ -4,14 +4,19 @@
 
 // FILTER
 .products__filter {
+  width: min(
+      var(--max-width-general),
+      100vw - 2 * var(--padding-general-sides)
+    );
+  margin-inline: auto;
   border-bottom: 1px solid var(--clr-body-dark);
-  border-top: 1px solid var(--clr-body-dark);
   padding-top: var(--padding-filter);
   padding-bottom: var(--padding-filter);
   background-color: var(--clr-body-light);
   position: sticky;
   top: 58px;
   z-index: 3;
+  margin-bottom: 1.3rem;
 }
 .filter__list {
   display: flex;
@@ -32,10 +37,10 @@
   position: absolute;
   right: 50%;
   transform: translateX(50%);
-  top: -17px;
+  bottom: -17px;
   border: 10px solid;
   /* border-radius: 10px; */
-  border-color: var(--clr-body-dark) #0000 #0000 #0000;
+  border-color:  #0000 #0000 var(--clr-body-dark) #0000;
 }
 
 @media (max-width: 470px) {
@@ -89,20 +94,18 @@
     cursor: pointer;
   }
   
-  
   .subfilter__row-container {
     padding-inline: 1rem;
     max-height: 200px;
     /* CHANGE THIS? */
     overflow-y: scroll;
-    padding-right: 3rem;
-    
+    padding-top: 4px;
+    padding-bottom: 4px;
   }
   
   .subfilter__clear {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
-  
     border-bottom: 1px solid gray;
   }
   .subfilter__clear > span {
@@ -141,18 +144,7 @@
     gap: 50px;
     justify-content: space-between;
   }
-  .subfilter__row-container {
-    padding-right: 10px;
-  }
-  
-  /* Temp section for sort */
-  
-  .sortDiv {
-    cursor: pointer;
-    margin-left: auto;
-  }
 
-  
   .subfilter-active {
     min-height: 30px;
   }
@@ -160,9 +152,7 @@
     --animate-duration: 0.2s;
   }
   
-  .products__filter {
-    margin-bottom: 1.3rem;
-  }
+  
   
   .subfilter-btn .fa-solid {
     font-size: smaller;
@@ -187,13 +177,16 @@
     color: hsl(0, 0%, 25%);
   }
   
+  // SORT
+  
+  .sortDiv {
+    cursor: pointer;
+    margin-left: auto;
+  }
+
+  
   .sort__row-container {
     overflow-y: hidden;
-  }
-  
-  .subfilter__row-container {
-    padding-top: 4px;
-    padding-bottom: 4px;
   }
   
   .sort__selection {
