--- a/CSS/welcome.scss
+++ b/CSS/welcome.scss
@@ -17,9 +17,9 @@
 }
 
 .welcome__image-container {
-  border: 2px solid red;
-  height: 200px;
-  width: 400px;
+  // border: 2px solid red;
+  height: 500px;
+  width: 50%;
   background-image: url(../images/welcome/keykapsWelcome.jpg);
   background-repeat: no-repeat;
   background-size: cover;
