--- a/public/index.css
+++ b/public/index.css
@@ -2206,12 +2206,11 @@ header {
 }
 
 .welcome__image-container {
-  height: 200px;
-  width: 400px;
+  height: 500px;
+  width: 50%;
   background-image: url("keykapsWelcome.73a81d94.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  border: 2px solid red;
 }
 
 .title {
