--- a/public/index.css
+++ b/public/index.css
@@ -2207,8 +2207,8 @@ header {
 
 .welcome__image-container {
   height: 500px;
-  width: 50%;
-  background-image: url("keykapsWelcome.73a81d94.jpg");
+  width: 60%;
+  background-image: url("keyboard_light.52dc0622.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
