--- a/CSS/welcome.scss
+++ b/CSS/welcome.scss
@@ -19,8 +19,8 @@
 .welcome__image-container {
   // border: 2px solid red;
   height: 500px;
-  width: 50%;
-  background-image: url(../images/welcome/keykapsWelcome.jpg);
+  width: 60%;
+  background-image: url(../images/welcome/keyboard_light.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -32,3 +32,4 @@
 .welcome__image {
   width: 400px;
 }
+
