--- a/public/index.css
+++ b/public/index.css
@@ -2926,6 +2926,37 @@ section.card-front .description .desc {
   }
 }
 
+footer {
+  height: 250px;
+  margin-top: 4rem;
+  position: relative;
+}
+
+footer .footer__background {
+  background-color: var(--clr-body-dark);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  clip-path: polygon(100% 100%, 0% 100%, 0% 28.33%, 2% 28.32%, 4% 28.28%, 6% 28.22%, 8% 28.13%, 10% 28.02%, 12% 27.88%, 14% 27.72%, 16% 27.54%, 18% 27.34%, 20% 27.12%, 22% 26.89%, 24% 26.64%, 26% 26.38%, 28% 26.11%, 30% 25.83%, 32% 25.54%, 34% 25.25%, 36% 24.96%, 38% 24.67%, 40% 24.38%, 42% 24.09%, 44% 23.81%, 46% 23.54%, 48% 23.29%, 50% 23.04%, 52% 22.81%, 54% 22.6%, 56% 22.41%, 58% 22.23%, 60% 22.08%, 62% 21.95%, 64% 21.84%, 66% 21.76%, 68% 21.7%, 70% 21.67%, 72% 21.67%, 74% 21.69%, 76% 21.73%, 78% 21.8%, 80% 21.9%, 82% 22.02%, 84% 22.16%, 86% 22.33%, 88% 22.51%, 90% 22.72%, 92% 22.94%, 94% 23.18%, 96% 23.43%, 98% 23.7%, 100% 23.97%);
+  position: absolute;
+}
+
+footer .footer__content-container {
+  width: min(var(--max-width-general), 100vw - 2 * var(--padding-general-sides));
+  flex-direction: column;
+  margin-inline: auto;
+  padding-top: 6rem;
+  display: flex;
+}
+
+footer .footer__content-container .footer__main-content {
+  color: #fff;
+  flex-flow: wrap;
+  justify-content: space-evenly;
+  gap: 1rem;
+  display: flex;
+}
+
 :root {
   --clr-body-dark: #3b444e;
   --clr-body-light: #fff;
