--- a/CSS/footer.scss
+++ b/CSS/footer.scss
@@ -1,7 +1,8 @@
 footer{
     position: relative;
     margin-top: 4rem;
-    height: 250px;
+    min-height: 250px;
+    padding-bottom: 2rem;
     
 
     .footer__background{
@@ -11,11 +12,11 @@ footer{
         height: 100%;
         z-index: -1;
         
-        clip-path: polygon(100% 100%, 0% 100% , 0.00% 28.33%, 2.00% 28.32%, 4.00% 28.28%, 6.00% 28.22%, 8.00% 28.13%, 10.00% 28.02%, 12.00% 27.88%, 14.00% 27.72%, 16.00% 27.54%, 18.00% 27.34%, 20.00% 27.12%, 22.00% 26.89%, 24.00% 26.64%, 26.00% 26.38%, 28.00% 26.11%, 30.00% 25.83%, 32.00% 25.54%, 34.00% 25.25%, 36.00% 24.96%, 38.00% 24.67%, 40.00% 24.38%, 42.00% 24.09%, 44.00% 23.81%, 46.00% 23.54%, 48.00% 23.29%, 50.00% 23.04%, 52.00% 22.81%, 54.00% 22.60%, 56.00% 22.41%, 58.00% 22.23%, 60.00% 22.08%, 62.00% 21.95%, 64.00% 21.84%, 66.00% 21.76%, 68.00% 21.70%, 70.00% 21.67%, 72.00% 21.67%, 74.00% 21.69%, 76.00% 21.73%, 78.00% 21.80%, 80.00% 21.90%, 82.00% 22.02%, 84.00% 22.16%, 86.00% 22.33%, 88.00% 22.51%, 90.00% 22.72%, 92.00% 22.94%, 94.00% 23.18%, 96.00% 23.43%, 98.00% 23.70%, 100.00% 23.97%);;
+        
 
     }
     .footer__content-container{
-        padding-top: 6rem;
+        padding-top: 4rem;
         width: min(
         var(--max-width-general),
         100vw - 2 * var(--padding-general-sides)
@@ -36,4 +37,10 @@ footer{
     }
 
     
+}
+
+@media(max-width: 768px){
+    .footer__content-container{
+        
+    }
 }
