--- a/CSS/footer.scss
+++ b/CSS/footer.scss
@@ -2,21 +2,27 @@ footer{
     position: relative;
     margin-top: 4rem;
     min-height: 250px;
-    padding-bottom: 2rem;
+    
+    background-color: var(--clr-body-dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 4rem;
+    padding-top: 3rem;
+
     
 
     .footer__background{
-        position: absolute;
-        background-color: var(--clr-body-dark);
-        width: 100%;
-        height: 100%;
-        z-index: -1;
+        // position: absolute;
+        // background-color: var(--clr-body-dark);
+        // width: 100%;
+        // height: 100%;
+        // z-index: -1;
         
         
 
     }
     .footer__content-container{
-        padding-top: 4rem;
         width: min(
         var(--max-width-general),
         100vw - 2 * var(--padding-general-sides)
@@ -25,13 +31,30 @@ footer{
         display: flex;
         flex-direction: column;
         
+        .footer__logo{
+            color: white;
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+            margin-bottom: 2rem;
+            font-size: 1.75rem;
+            font-weight: 600;
+        }
+
         .footer__main-content{
             color: white;
             display: flex;
             flex-direction: row;
-            justify-content: space-evenly;
+            justify-content: space-between;
             flex-wrap: wrap;
-            gap: 1rem;  
+            gap: 2rem;  
+            .footer__part{
+                
+                ul .footer__subheading{
+                    color: rgba(197, 197, 197, 0.688);
+                    padding-bottom: .5rem;
+                }
+            }
                
 
         }
@@ -40,8 +63,27 @@ footer{
     
 }
 
-@media(max-width: 768px){
-    .footer__content-container{
+@media(max-width: 680px){
+    .footer__main-content{
+        
+        display: grid !important;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
         
     }
+}
+
+@media(max-width: 450px){
+    .footer__logo{
+        justify-content: center;
+    }
+    .footer__main-content{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        
+        .footer__part{
+            text-align: center;
+        }
+    }
+
 }
