Nav and filter kinda responsive. Needs tweaking

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -18,6 +18,8 @@
   --ff: "Roboto", sans-serif;
 
   --padding-general-sides: 2rem;
+  --padding-mobile-sides: 1rem;
+
   --margin-vert-between-sections: 3rem;
   --max-width-general: 1200px;
   --height-header-desktop: 140px;
