--- a/CSS/filter.scss
+++ b/CSS/filter.scss
@@ -132,8 +132,10 @@
     border: none;
     border-radius: 0.25rem;
     gap: 10px;
-    padding: 0.5rem 1rem;
     cursor: pointer;
+    padding: 0.25rem 0.75rem;
+    background-color: hsl(0, 0%, 85%);
+    border-radius: 0.25rem;
   }
   .active-filter-btn:hover {
     background-color: rgb(183, 182, 182);
@@ -167,11 +169,7 @@
     min-width: max-content;
   }
 
-  .active-filter-btn {
-    padding: 0.25rem 0.75rem !important;
-    background-color: hsl(0, 0%, 85%);
-    border-radius: 0.25rem;
-  }
+  
   
   .active-filter-btn :nth-child(2) {
     color: hsl(0, 0%, 25%);
@@ -200,3 +198,62 @@
 .general-subfilter-btn {
   color: var(--clr-body-dark);
 }
+
+@media (max-width: 770px) {
+  .products__filter {
+    width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  
+  
+}
+
+@media (max-width: 470px) {
+  .general-subfilter-btn {
+    padding: .25rem .75rem;
+  }
+  .subfilter{
+    flex-wrap: wrap;
+  }
+
+  .filter__list{
+    width: calc(100vw - 40px) !important;
+    
+  }
+  .nav-container{
+    width: calc(100vw - 2 * var(--padding-mobile-sides)) !important;
+  }
+}
+
+@media (max-width: 380px) {
+  .subfilter {
+    justify-content: space-between;
+  }
+  .sortDiv {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 360px) {
+  .filter__list{
+    width: calc(100vw - 2 * var(--padding-mobile-sides)) !important;
+  font-size: .9rem !important;  
+  }
+
+  .subfilter-container {
+    width: calc(100vw - 2 * var(--padding-mobile-sides)) !important;
+  }
+
+  .general-subfilter-btn{
+  font-size: .9rem !important;
+  }
+
+  
+
+}
+
+
+
+
