a lil bit of cleaning

--- a/CSS/admin.scss
+++ b/CSS/admin.scss
@@ -143,7 +143,7 @@ main.admin {
         .toggle {
           width: 25px;
           input[type="checkbox"] {
-            pointer-events: none;
+            // pointer-events: none;
           }
         }
         button {
