--- a/CSS/product-card.scss
+++ b/CSS/product-card.scss
@@ -301,22 +301,19 @@ section.card-front{
             padding: 0;
             border: none;
             box-shadow: none;
-            figure{
-                overflow:hidden;
+            .swiper {
+                border-radius: 0.25rem;
                 width: 100%;
-                height: 40vh;
-                padding: 0;
-                display: flex;
-                align-items: center;
-                img{
-                    overflow:hidden;
-                    width: 100%;
-                    height: 40vh;
-                    border-radius: 0;
-                    object-fit: cover;
-                    object-position: center;
+                height: 55%;
+                .swiper-wrapper {
+                  height: 100%;
+                  .swiper-slide {
+                    height: 100%;
+                    }
                 }
             }
+              
+            
             .description{
                 padding: 10px 12px;
                 display: flex;
