--- a/public/index.css
+++ b/public/index.css
@@ -2497,6 +2497,7 @@ header {
   box-sizing: border-box;
   max-width: 100%;
   min-width: 250px;
+  border-radius: var(--br);
   height: 350px;
   margin: 0;
   padding: 0;
@@ -2608,6 +2609,10 @@ section.card-front .description .desc {
 }
 
 @media only screen and (min-width: 604px) {
+  .spotlight {
+    background-color: #fb892b;
+  }
+
   dialog.product-modal {
     z-index: 3;
     width: 90vw;
