--- a/CSS/product-card.scss
+++ b/CSS/product-card.scss
@@ -217,10 +217,11 @@ section.card-front{
             
             
             .text{
+                padding-right: 5%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
-                width: 50%;
+                width: 45%;
                 height: 100%;
                 span.title{
                     font-weight: 600;
