non active highlighted

--- a/CSS/product-card.scss
+++ b/CSS/product-card.scss
@@ -148,6 +148,9 @@ section.card-front{
     .spotlight{
         background-color: #fb892b;
     }
+    .active{
+        background-color: #a2a1a0;
+    }
     dialog.product-modal{
 
         border: 1px solid lightgray;
